# photobook-as-code

./: .gitignore  CONTRIBUTING.md  README.md  example-config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: theme_migration.md
openspec/: README.md
openspec/changes/archive/2026-06-28-distribute-photos-instead-of-empty-pages/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-initial-version/: design.md  proposal.md
openspec/changes/both-dimensions-for-template-size/: design.md  proposal.md  tasks.md
openspec/changes/initial-version/: tasks.md
openspec/changes/layout-specification-in-themes/: design.md  proposal.md  tasks.md
openspec/changes/memory-optimzation-for-pdf-generation/: design.md  proposal.md  tasks.md
openspec/specs/: photobook-cli.md
openspec/specs/layout-templates/: spec.md
openspec/specs/output-generation/: spec.md
openspec/specs/photo-layout-engine/: spec.md
openspec/specs/theme-system/: spec.md
openspec/specs/yaml-configuration/: spec.md
openspec/templates/: spec-template.md
src/photobook_as_code/: __init__.py  cli.py  config.py  layout.py  output.py  photos.py  renderer.py  themes.py
src/photobook_as_code/themes/: classic.yaml  clean.yaml  modern.yaml
tests/: create_fixtures.py  test_layout.py  test_layout_templates.py  test_renderer.py
tests/fixtures/: config-basic.yaml  config-excess-pages.yaml  config-pages.yaml  config-png.yaml  config-sparse-1-10.yaml  config-sparse-2-5.yaml  config-sparse-3-10.yaml
(+23 files in other folders)
